Adjust search results component styles to include max-width and overflow properties, refactor keyword chart component styles, and fix card heights

--- a/src/app/pages/search-results/search-results.component.scss
+++ b/src/app/pages/search-results/search-results.component.scss
@@ -10,6 +10,7 @@
   h2 {
     color: white;
     margin-bottom: 0;
+    padding-left: 10px;
   }
   .paper-list {
     display: grid;
@@ -19,6 +20,7 @@
     margin-bottom: 20px;
     max-height: 100vh;
     overflow-y: auto;
+    padding: 10px;
 
     @media screen and (max-width: 1024px) {
       grid-template-columns: 1fr;
@@ -26,8 +28,10 @@
   }
   .results {
     display: grid;
-    grid-gap: 20px;
     grid-template-columns: 2fr 1fr;
+    pv-keyword-chart {
+      padding: 10px;
+    }
     @media screen and (max-width: 768px) {
       grid-template-columns: 1fr;
       pv-keyword-chart {
